2020-10: ver. 39.0
* docgen now creates a single README and updated the README to include info on App Host
* Added Resilient Platform version to customize.py template
* package command replaces tags on Resilient objects in export.res instead of extending them
* Added environmental variable RES_SDK_DEV
* Added '--set-version' argument to dev command
* Added 'display_name' attribute to setup.py file
* codegen, codegen --reload and dev --set-version commands now create /util/data/export.res file
  that contains the import definition that was previously base64 encoded text in customize.py
* codegen and package commands now return error if package name contains uppercase characters
* Added 'clone' command to clone an Action Object

2020-07: ver. 37.2

* Updates to Dockerfile template
* Support for newest export formats
* Bug fixes.

2020-05: ver. 37.0

* Package created. Using 37 as original version
* Added support for API key permissions in app.json using permissions file.
* Added support for new apphost config section.
* Customization and config properties files now extracted from setup.py.
* Rename 'app:package' command to 'package'.
* Bug fixes.

2020-04: ver. 36.2.dev

* Package dev version created. Using 36.2 as original version
* Added support for API key permissions in app.json using permissions file.
* Added support for new apphost config section.
* Customization and config properties files now extracted from setup.py.
* Rename 'app:package' command to 'package'.
* Bug fixes.

2020-04. ver. 0.0