@@ -8,6 +8,7 @@
 * codegen, codegen --reload and dev --set-version commands now create /util/data/export.res file
   that contains the import definition that was previously base64 encoded text in customize.py
 * codegen and package commands now return error if package name contains uppercase characters
+* When using resilient-sdk --verbose, print absolute file paths
 * Added 'clone' command to clone an Action Object
 
 2020-07: ver. 37.2
